<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/grayblack">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewSearch"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/search"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_search"
                android:inputType="textPersonName"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/go"
                android:textColor="@color/gray4"
                android:background="@color/orange"/>
        </LinearLayout>


    <ListView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border" />


    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/orange"
        android:gravity="center"
        android:onClick="cancelButton"
        android:text="@string/cancel"
        android:textColor="@color/gray4" />
</LinearLayout>
